--- a/GitHubRepoSearch/app/src/main/res/values/strings.xml
+++ b/GitHubRepoSearch/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GitHub Repo Search</string>
     <string name="search">Search</string>
+    <string name="error_message">Failed to get results, please try again.</string>
 </resources>
